move storage provider config to config package, remove viper package form storage

--- a/config.yml.example
+++ b/config.yml.example
@@ -1,8 +1,8 @@
 watch: 
  - "C:\\Users\\John\\Documents\\"
-backup: 
- local: 
-  path: "D:\\backup\\"
-  active: true
-fake:
-  active: false
+storage: 
+  local: 
+    path: "D:\\backup\\"
+    active: true
+  fake:
+    active: false
