--- a/config.yml.example
+++ b/config.yml.example
@@ -1,7 +1,7 @@
 watch: 
  - "C:\\Users\\John\\Documents\\"
 storage: 
-  googleDrive:
+  gdrive:
     path: ""
     tokenFile: "token.json"
     credentialsFile: "credentials.json"
